force-app/main/default/objects/FieldsOnFiles_Field__mdt/FieldsOnFiles_Field__mdt.object-meta.xml
<CustomObject>
    <label>FieldsOnFiles Field</label>
    <pluralLabel>FieldsOnFiles Fields</pluralLabel>
</CustomObject>