force-app/main/default/objects/FieldsOnFiles_Field__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <label>Field</label>
    <type>Text</type>
    <fullName>Field__c</fullName>
    <length>255</length>
    <required>true</required>
    <description>The API name of the field</description>
    <inlineHelpText>The API name of the field</inlineHelpText>
</CustomField>