force-app/main/default/objects/FieldsOnFiles_Field__mdt/fields/FieldsOnFiles_Settings__c.field-meta.xml
<CustomField>
    <fullName>FieldsOnFiles_Settings__c</fullName>
    <label>FieldsOnFiles Settings</label>
    <referenceTo>FieldsOnFiles_Settings__mdt</referenceTo>
    <relationshipLabel>FieldsOnFiles Fields</relationshipLabel>
    <relationshipName>FieldsOnFiles_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>