force-app/main/default/objects/FieldsOnFiles_Field__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>FieldsOnFiles_Fields</relationshipLabel>
    <relationshipName>FieldsOnFiles_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>