force-app/main/default/objects/FieldsOnFiles_Field__mdt/fields/Show_on_Related_List__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Related_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Related List</label>
    <type>Checkbox</type>
</CustomField>