force-app/main/default/objects/FieldsOnFiles_Field__mdt/fields/Show_on_Upload_Form__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Upload_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Upload Form</label>
    <type>Checkbox</type>
</CustomField>